--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -8,31 +8,56 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>alt-component</title>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" integrity="sha256-ngFW3UnAN0Tnm76mDuu7uUtYEcG3G5H1+zioJw3t+68=" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+
+  <script type="text/javascript" src="datetimepicker.5.1.2/js/tempusdominus-bootstrap-4.min.js"></script>
+  <link rel="stylesheet" href="datetimepicker.5.1.2/css/tempusdominus-bootstrap-4.min.css" />
 
 
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.5.1/vue-resource.min.js"></script>
-
-
-  <link rel="stylesheet" href="http://127.0.0.1/alt3/adminlte/dist/css/AdminLTE.min.css" />
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 </head>
 
 <body class="hold-transition fl">
   <div class="wrapper container">
 
-    <card :collapsible="true" class="card-outline card-primary" data-uri="UI/save">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="form-group">
+            require
+            <input type="text" is="alt-datetime" format="YYYY-MM-DD" required />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="form-group">
+            <input type="text" is="alt-datetime" format="YYYY-MM-DD" />
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="form-group">
+            <input type="text" is="alt-datetime" format="HH:mm" :stepping="30" />
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- card :collapsible="true" class="card-outline card-primary" data-uri="UI/save">
       <card-header>Card header</card-header>
       <card-body>body</card-body>
       <card-footer>footer</card-footer>
@@ -77,23 +102,18 @@
         </grid-section>
 
       </div>
-    </grid>
-
-
-    <div id="div1">
-
+    </grid -->
 
 
     </div>
 
+    <script>
 
-  </div>
+      var vm = new Vue({
+        el: "#div1"
 
-  <script>
-    var vm = new Vue({
-      el: "#div1"
-    });
-  </script>
+      });
+    </script>
 
 </body>
 
