--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" integrity="sha256-ngFW3UnAN0Tnm76mDuu7uUtYEcG3G5H1+zioJw3t+68=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
 
@@ -23,10 +23,37 @@
   <link rel="stylesheet" href="datetimepicker.5.1.2/css/tempusdominus-bootstrap-4.min.css" />
 
 
+  <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" />
+  <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+
 </head>
 
 <body class="hold-transition fl">
   <div class="wrapper container">
+
+    <hr />
+    <div class="container">
+
+      <div id="div1">
+        <table is="datatables">
+          <thead>
+            <tr>
+              <th>username</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>admin1</td>
+            </tr>
+          </tbody>
+
+        </table>
+      </div>
+    </div>
+
+    <hr />
 
     <div class="container">
       <div class="row">
@@ -108,9 +135,14 @@
     </div>
 
     <script>
-
-      var vm = new Vue({
-        el: "#div1"
+      document.addEventListener("DOMContentLoaded", () => {
+        var vm = new Vue({
+          el: "#div1",
+          data: {
+            columns: [{ title: 'username', data: 'username' }],
+            data: [{ username: 'admin1' }, { username: 'admin2' }]
+          }
+        });
 
       });
     </script>
