--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -6,147 +6,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>alt-component</title>
-
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
-
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-
-  <script type="text/javascript" src="datetimepicker.5.1.2/js/tempusdominus-bootstrap-4.min.js"></script>
-  <link rel="stylesheet" href="datetimepicker.5.1.2/css/tempusdominus-bootstrap-4.min.css" />
-
-
-  <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" />
-  <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
 </head>
 
-<body class="hold-transition fl">
-  <div class="wrapper container">
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
 
-    <hr />
-    <div class="container">
+  <!-- built files will be auto injected -->
 
-      <div id="div1">
-        <table is="datatables">
-          <thead>
-            <tr>
-              <th>username</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td>admin1</td>
-            </tr>
-          </tbody>
-
-        </table>
-      </div>
-    </div>
-
-    <hr />
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            require
-            <input type="text" is="alt-datetime" format="YYYY-MM-DD" required />
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <input type="text" is="alt-datetime" format="YYYY-MM-DD" />
-          </div>
-        </div>
-      </div>
+  alt-component
+  <div id="div1">
+    <form method="POST">
+      <date value="2020-04-23" name="date1" required></date>
+      <button type="submit">submit</button>
+    </form>
 
 
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <input type="text" is="alt-datetime" format="HH:mm" :stepping="30" />
-          </div>
-        </div>
-      </div>
+  </div>
 
-      <hr />
-
-      <!-- card :collapsible="true" class="card-outline card-primary" data-uri="UI/save">
-      <card-header>Card header</card-header>
-      <card-body>body</card-body>
-      <card-footer>footer</card-footer>
-    </card>
-
-    <hr />
-
-    <grid>
-      <div class=" row">
-        <grid-section class="col-md-6">
-
-          <card grid-item="1" :collapsible="true" class="card-outline card-primary" :pinable="true">
-            <card-header>Card header</card-header>
-            <card-body>body</card-body>
-            <card-footer>footer</card-footer>
-          </card>
-
-
-          <card grid-item="2" :collapsible="true" class="card-outline card-primary" :pinable="true">
-            <card-header>Card header 2</card-header>
-            <card-body>body 2</card-body>
-            <card-footer>footer 2</card-footer>
-          </card>
-
-        </grid-section>
-
-        <grid-section class="col-md-6">
-
-          <card grid-item="3" :collapsible="true" class="card-outline card-primary" :pinable="true">
-            <card-header>Card header3</card-header>
-            <card-body>body</card-body>
-            <card-footer>footer</card-footer>
-          </card>
-
-
-          <card grid-item="4" :collapsible="true" class="card-outline card-primary" :pinable="true">
-            <card-header>Card header 4</card-header>
-            <card-body>body 2</card-body>
-            <card-footer>footer 2</card-footer>
-          </card>
-
-        </grid-section>
-
-      </div>
-    </grid -->
-
-
-    </div>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        var vm = new Vue({
-          el: "#div1",
-          data: {
-            columns: [{ title: 'username', data: 'username' }],
-            data: [{ username: 'admin1' }, { username: 'admin2' }]
-          }
-        });
-
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      var vm = new Vue({
+        el: "#div1"
       });
-    </script>
 
+    });
+  </script>
 </body>
 
 </html>
