rt search change input to el-input

--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -38,7 +38,7 @@
 
 
         <div is="rt2"
-          :columns='[{"name":"user_id","title":null,"data":null,"type":"checkbox","orderable":false,"searchable":false,"searchType":"text","searchOption":[],"searchOptGroup":null,"searchMultiple":null,"searchMethod":null,"editable":false,"editType":"text","editData":null,"wrap":false,"noHide":false},{"name":"username","title":"\u4f7f\u7528\u8005\u540d\u7a31","data":"username","type":"text","orderable":false,"searchable":false,"searchType":"text","searchOption":[],"searchOptGroup":null,"searchMultiple":null,"searchMethod":null,"editable":false,"editType":"text","editData":null,"wrap":false,"noHide":false}]'
+          :columns='[{"name":"user_id","title":null,"data":null,"type":"checkbox","orderable":false,"searchable":true,"searchType":"text","searchOption":[],"searchOptGroup":null,"searchMultiple":null,"searchMethod":null,"editable":false,"editType":"text","editData":null,"wrap":false,"noHide":false},{"name":"username","title":"\u4f7f\u7528\u8005\u540d\u7a31","data":"username","type":"text","orderable":false,"searchable":false,"searchType":"text","searchOption":[],"searchOptGroup":null,"searchMultiple":null,"searchMethod":null,"editable":false,"editType":"text","editData":null,"wrap":false,"noHide":false}]'
           :data="[]" :ajax='{"url":"\/data.json"}' :responsive="false" cell-url :page-length="10" :selectable="false"
           :buttons="[]" :dropdown="[]" :order="[]"></div>
 
